java example changes